# DogDoctor

./: .gitignore  README.md  dog_breeds_data.sql  main.py  pyproject.toml
app/: .env  .env.example  database.py  main.py  models.py
app/routers/: predict.py  train.py  upload.py
app/services/: breed_data.py  breed_service.py  dataset.py  model.py  predict_utils.py  preprocess.py  train_utils.py  visualization.py
frontend/dog_front/: package-lock.json  package.json
frontend/dog_front/src/: App.vue  main.js
